# Qt

./: .gitignore
Lesson1/Task1/HelloGraphicWorld/: CMakeLists.txt  main.cpp
Lesson10/Task1/: CMakeLists.txt  mainwindow.cpp  structs.h  tcpclient.cpp  tcpclient.h
Lesson2/Task1/Task1/: CMakeLists.txt  main.cpp
Lesson3/Task1/: CMakeLists.txt  connectiondialog.cpp  connectiondialog.h  helpdialog.cpp  helpdialog.h  helpdialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson4/Task1/: mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson5/Task1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  stopwatch.cpp  stopwatch.h
Lesson6/Task1/: CMakeLists.txt  mainwindow.cpp
Lesson7/Task1/: CMakeLists.txt  chartwindow.cpp  chartwindow.h  chartwindow.ui  datachart.cpp  datachart.h  mainwindow.cpp  mainwindow.h
Lesson8/Task1/: CMakeLists.txt  connectiondialog.cpp  connectiondialog.h  connectiondialog.ui  database.cpp  database.h  dbdata.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Lesson9/Task1/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
